# Litematic_V7_To_V6_DynamicLibrary

./: .gitignore  CMakeLists.txt  LibraryDependencies.props  Litematic_V7_To_V6_DynamicLibrary.sln  README.md  cmake-build.bat  cmake-build.sh
.github/workflows/: c-cpp.yml
Dependencies/nbt_cpp/: vcpkg_config.h
Litematic_V7_To_V6_DynamicLibrary/: CMakeLists.txt  JNI_Exports.cpp  Litematic_V7_To_V6.cpp  Litematic_V7_To_V6.h  Litematic_V7_To_V6_DynamicLibrary.vcxproj  Litematic_V7_To_V6_DynamicLibrary.vcxproj.filters  Process_Litematic_Data.hpp  dllmain.cpp
Litematic_V7_To_V6_DynamicLibrary/jni/include/: dev_shun_litematica_extra_SchematicNativeReader.h
Litematic_V7_To_V6_DynamicLibrary/jni/lib/: jvm.lib
